--- a/package.json
+++ b/package.json
@@ -21,19 +21,20 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-   "start:front": "react-scripts start",
+  "start:front": "react-scripts start",
   "build:front": "react-scripts build",
-  "start:back": "node server.js",
+  "start:back": "node api/server.js",
   "build": "yarn build:front",
   "start": "yarn build && yarn start:back",
-  "server:dev": "nodemon server.js",
-  "server:prod": "node server.js",
+  "server:dev": "nodemon api/server.js",
+  "server:prod": "node api/server.js",
   "test": "react-scripts test",
   "eject": "react-scripts eject"
-  },
+},
   "eslintConfig": {
     "extends": [
       "react-app",
+
       "react-app/jest"
     ]
   },
