--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
   "scripts": {
   "start:front": "react-scripts start",
   "build:front": "react-scripts build",
-  "start:back": "node api/server.js",
+  "start:back": "node server.js",
   "build": "yarn build:front",
   "start": "yarn build && yarn start:back",
-  "server:dev": "nodemon api/server.js",
-  "server:prod": "node api/server.js",
+  "server:dev": "nodemon server.js",
+  "server:prod": "node server.js",
   "test": "react-scripts test",
   "eject": "react-scripts eject"
 },
